# solmap

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: solar.py
backend/app/core/: config.py
backend/app/models/: solar.py
backend/app/services/: pvgis_client.py  solar_service.py
backend/tests/: test_api.py  test_solar_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/: ResultsPanel.module.css  ResultsPanel.tsx
frontend/src/hooks/: useSolarQuery.ts
frontend/src/pages/: MapPage.module.css  MapPage.tsx
frontend/src/services/: solarApi.test.ts  solarApi.ts  types.ts
